--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 		</a>
 		{% endif %}
 		<h1 class="site-title">
-			<a href="{{ site.baseurl }}/">Blog</a>
+			<!-- <a href="{{ site.baseurl }}/">Blog</a> -->
 		</h1>
 	</div>
 	<nav class="site-nav">
@@ -23,7 +23,7 @@
 			{% for page in site_pages %}
 			{% if page.title and page.hide != true %}
 			<li>
-				<a class="page-link" href="{{ page.url | relative_url }}">
+				<a class="page-link" href="{{ page.url | relative_url }}" target="_blank">
 					{{ page.title }}
 				</a>
 			</li>
