--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -1,6 +1,6 @@
 {% if site.theme_settings.rss %}
 <li>
-	<a href="{{ "/feed.xml" | relative_url }}" title="{{ site.theme_settings.str_rss_follow }}">
+	<a href="{{ "/feed.xml" | relative_url }}" title="{{ site.theme_settings.str_rss_follow }}" target="_blank">
 		<i class="fas fa-fw fa-rss"></i>
 	</a>
 </li>
@@ -8,7 +8,7 @@
 
 {% if site.theme_settings.email_address %}
 <li>
-	<a href="mailto:{{ site.theme_settings.email_address }}" title="{{ site.theme_settings.str_email }}">
+	<a href="mailto:{{ site.theme_settings.email_address }}" title="{{ site.theme_settings.str_email }} target="_blank"">
 		<i class="fas fa-fw fa-envelope"></i>
 	</a>
 </li>
@@ -16,7 +16,7 @@
 
 {% if site.theme_settings.behance %}
 <li>
-	<a href="https://www.behance.net/{{ site.theme_settings.behance }}" title="{{ site.theme_settings.str_follow_on }} Behance">
+	<a href="https://www.behance.net/{{ site.theme_settings.behance }}" target="_blank" title="{{ site.theme_settings.str_follow_on }} Behance">
 		<i class="fab fa-fw fa-behance"></i>
 	</a>
 </li>
@@ -24,7 +24,7 @@
 
 {% if site.theme_settings.bitbucket %}
 <li>
-	<a href="https://bitbucket.org/{{ site.theme_settings.bitbucket }}" title="{{ site.theme_settings.str_follow_on }} Bitbucket">
+	<a href="https://bitbucket.org/{{ site.theme_settings.bitbucket }}" target="_blank" title="{{ site.theme_settings.str_follow_on }} Bitbucket">
 		<i class="fab fa-fw fa-bitbucket"></i>
 	</a>
 </li>
@@ -32,7 +32,7 @@
 
 {% if site.theme_settings.dribbble %}
 <li>
-	<a href="https://dribbble.com/{{ site.theme_settings.dribbble }}" title="{{ site.theme_settings.str_follow_on }} Dribbble">
+	<a href="https://dribbble.com/{{ site.theme_settings.dribbble }}" target="_blank" title="{{ site.theme_settings.str_follow_on }} Dribbble">
 		<i class="fab fa-fw fa-dribbble"></i>
 	</a>
 </li>
@@ -40,7 +40,7 @@
 
 {% if site.theme_settings.facebook %}
 <li>
-	<a href="https://www.facebook.com/{{ site.theme_settings.facebook }}" title="{{ site.theme_settings.str_follow_on }} Facebook">
+	<a href="https://www.facebook.com/{{ site.theme_settings.facebook }}" target="_blank" title="{{ site.theme_settings.str_follow_on }} Facebook">
 		<i class="fab fa-fw fa-facebook"></i>
 	</a>
 </li>
@@ -48,7 +48,7 @@
 
 {% if site.theme_settings.flickr %}
 <li>
-	<a href="https://www.flickr.com/photos/{{ site.theme_settings.flickr }}" title="{{ site.theme_settings.str_follow_on }} Flickr">
+	<a href="https://www.flickr.com/photos/{{ site.theme_settings.flickr }}" target="_blank" title="{{ site.theme_settings.str_follow_on }} Flickr">
 		<i class="fab fa-fw fa-flickr"></i>
 	</a>
 </li>
@@ -56,7 +56,7 @@
 
 {% if site.theme_settings.github %}
 <li>
-	<a href="https://github.com/{{ site.theme_settings.github }}" title="{{ site.theme_settings.str_follow_on }} GitHub">
+	<a href="https://github.com/{{ site.theme_settings.github }}" target="_blank" title="{{ site.theme_settings.str_follow_on }} GitHub">
 		<i class="fab fa-fw fa-github"></i>
 	</a>
 </li>
@@ -64,7 +64,7 @@
 
 {% if site.theme_settings.google_plus %}
 <li>
-	<a href="https://plus.google.com/{{ site.theme_settings.google_plus }}" title="{{ site.theme_settings.str_follow_on }} Google+">
+	<a href="https://plus.google.com/{{ site.theme_settings.google_plus }}" target="_blank" title="{{ site.theme_settings.str_follow_on }} Google+">
 		<i class="fab fa-fw fa-google-plus"></i>
 	</a>
 </li>
@@ -72,7 +72,7 @@
 
 {% if site.theme_settings.instagram %}
 <li>
-	<a href="http://instagram.com/{{ site.theme_settings.instagram }}" title="{{ site.theme_settings.str_follow_on }} Instagram">
+	<a href="http://instagram.com/{{ site.theme_settings.instagram }}" target="_blank" title="{{ site.theme_settings.str_follow_on }} Instagram">
 		<i class="fab fa-fw fa-instagram"></i>
 	</a>
 </li>
@@ -80,7 +80,7 @@
 
 {% if site.theme_settings.linkedin %}
 <li>
-	<a href="{{ site.theme_settings.linkedin }}" title="{{ site.theme_settings.str_follow_on }} LinkedIn">
+	<a href="{{ site.theme_settings.linkedin }}" target="_blank" title="{{ site.theme_settings.str_follow_on }} LinkedIn">
 		<i class="fab fa-fw fa-linkedin"></i>
 	</a>
 </li>
@@ -144,7 +144,7 @@
 
 {% if site.theme_settings.twitter %}
 <li>
-	<a href="https://twitter.com/{{ site.theme_settings.twitter }}" title="{{ site.theme_settings.str_follow_on }} Twitter">
+	<a href="https://twitter.com/{{ site.theme_settings.twitter }}" target="_blank" title="{{ site.theme_settings.str_follow_on }} Twitter">
 		<i class="fab fa-fw fa-twitter"></i>
 	</a>
 </li>
@@ -160,7 +160,7 @@
 
 {% if site.theme_settings.youtube %}
 <li>
-	<a href="https://www.youtube.com/user/{{ site.theme_settings.youtube }}" title="{{ site.theme_settings.str_follow_on }} YouTube">
+	<a href="https://www.youtube.com/user/{{ site.theme_settings.youtube }}" target="_blank" title="{{ site.theme_settings.str_follow_on }} YouTube">
 		<i class="fab fa-fw fa-youtube"></i>
 	</a>
 </li>
